The one about SEO!
- Adjust titles of pages in front matter.
- Use linktitle front matter when page shows in menu.
- Add favicon
- Update meta tags on baseof.html template.
- Update posts/ directory to blog/
- Add Site description for homepage.
- Update page description in content front matter.

--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ languageCode = "en-us"
 title = "Jake Wiesler"
 
 [params]
-  userHandle = "@jakewies"
+  description = "Front-end Developer, CSS Tinkerer, and UI Designer."
