Add copyright field to config.toml

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://www.jakewiesler.com/"
 languageCode = "en-us"
 title = "Jake Wiesler"
 preserveTaxonomyNames = true
+copyright = '© 2017-{year} Copyright Jake Wiesler. All rights reserved.'
 
 [taxonomies]
   tag = "tags"
