Update About page

--- a/config.toml
+++ b/config.toml
@@ -9,5 +9,5 @@ copyright = "© 2017-{year} Copyright Jake Wiesler. All rights reserved."
 
 [params]
   author = "Jake Wiesler"
-  description = "Front-end Developer, CSS Tinkerer, and UI Designer."
+  description = "Front-end developer building things on the Web and writing about his experiences."
   twitter = "@jakewies"
