--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\""
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.5.5",
@@ -44,8 +45,10 @@
     "react-share": "^4.2.0",
     "remark-slug": "^6.0.0",
     "theme-ui": "^0.3.1",
-    "yup": "^0.29.1",
-    "prettier": "^1.19.1"
+    "yup": "^0.29.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.5"
   },
   "license": "MIT",
   "main": "n/a",
