--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
-    "@n8tb1t/use-scroll-position": "^1.0.43",
     "@sindresorhus/slugify": "^1.0.0",
     "@theme-ui/prism": "^0.3.0",
-    "formik": "^2.1.4",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.21",
@@ -39,17 +37,15 @@
     "gatsby-transformer-sharp": "^2.3.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-buttondown": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-share": "^4.2.0",
     "remark-slug": "^6.0.0",
-    "theme-ui": "^0.3.1",
-    "yup": "^0.29.1"
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "2.2.0"
   },
   "license": "MIT",
   "main": "n/a",
